fix screens
